--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
-﻿# CMakeList.txt : Top-level CMake project file, do global configuration
-# and include sub-projects here.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.12)
 
 project ("3D-tetris")
 
-# Include sub-projects.
+add_subdirectory("extern/glfw")
+
 add_subdirectory ("3D-tetris")
