--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@
 project ("3D-tetris")
 
 add_subdirectory("extern/glfw")
+add_subdirectory("extern/glad/cmake")
+glad_add_library(glad_gl_core_46 REPRODUCIBLE API gl:core=4.6)
 
 add_subdirectory ("3D-tetris")
