convert glfw to vcpkg package from git submodule

--- a/3D-tetris/CMakeLists.txt
+++ b/3D-tetris/CMakeLists.txt
@@ -1,4 +1,6 @@
-﻿add_executable (3D-tetris
+﻿find_package(glfw3 REQUIRED)
+
+add_executable (3D-tetris
 	"src/3D-tetris.cpp"
 	"src/game/game.ixx"
 	"src/graphics/Buffer.ixx"
@@ -7,21 +9,16 @@
 	"src/graphics/Texture.ixx"
 	"src/graphics/Application.ixx"
 	"src/graphics/graphics.ixx"
-  )
+)
 
 set_property(TARGET 3D-tetris PROPERTY CXX_STANDARD 20)
 
-add_dependencies(3D-tetris glfw glad_gl_core_46)
+add_dependencies(3D-tetris glad_gl_core_46)
 
 target_include_directories(3D-tetris PRIVATE
-	${CMAKE_SOURCE_DIR}/extern/glfw/include/GLFW
 	${CMAKE_SOURCE_DIR}/extern/glm/glm
 	${CMAKE_SOURCE_DIR}/extern/stb
 	"${CMAKE_CURRENT_BINARY_DIR}/gladsources/glad_gl_core_46/include"
-)
-
-target_link_directories(3D-tetris PRIVATE
-	${CMAKE_CURRENT_BINARY_DIR}/extern/glfw/src
 )
 
 target_link_libraries(3D-tetris PRIVATE
