--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 ﻿cmake_minimum_required (VERSION 3.12)
+set(CMAKE_TOOLCHAIN_FILE extern/vcpkg/scripts/buildsystems/vcpkg.cmake)
 
 project ("3D-tetris")
 
-add_subdirectory("extern/glfw")
 add_subdirectory("extern/glad/cmake")
 glad_add_library(glad_gl_core_46 REPRODUCIBLE API gl:core=4.6)
 
